tests/if/var_in_then.lox
// error
if (true) var foo;
